Модуль RSS: перевод модуля под версию ядра 0.5

--- a/js/chanel.htm
+++ b/js/chanel.htm
@@ -1,4 +1,4 @@
-<!--{panel}-->
+<!--{widget}-->
 <div class="buttons right">
 		<input id="{i#addchanel}" type="button" value="{#rss.chanel.panel.baddchan}" />
 </div>
