--- a/js/chanel.htm
+++ b/js/chanel.htm
@@ -1,125 +1,106 @@
-<!--{widget}-->
-<div class="buttons right">
-		<input id="{i#addchanel}" type="button" value="{#rss.chanel.panel.baddchan}" />
+<!--{widget}--><div class="buttons right">
+		<input id="{i#addchanel}" type="button" value="{#mod.rss.chanel.panel.baddchan}" />
 </div>
-<div id='{i#table}'>{#rss.chanel.panel.loading}</div>
+<div id='{i#table}'>{#mod.rss.chanel.panel.loading}</div>
 
 <div class="buttons right">
-		<input id="{i#addsource}" type="button" value="{#rss.chanel.panel.baddsrc}" />
+		<input id="{i#addsource}" type="button" value="{#mod.rss.chanel.panel.baddsrc}" />
 </div>
-<div id='{i#tablesource}'>{#rss.chanel.panel.loading}</div>
-
-<!--{table}-->
-<table class="bk-table-def">
+<div id='{i#tablesource}'>{#mod.rss.chanel.panel.loading}</div>
+<!--{table}--><table class="bk-table-def">
 	<thead>
 		<tr>
-			<th>{#rss.chanel.table.title}</th>
-			<th>{#rss.chanel.table.link}</th>
-			<th>{#rss.chanel.table.interval}</th>
-			<th>{#rss.chanel.table.lastchk}</th>
+			<th>{#mod.rss.chanel.table.title}</th>
+			<th>{#mod.rss.chanel.table.link}</th>
+			<th>{#mod.rss.chanel.table.interval}</th>
+			<th>{#mod.rss.chanel.table.lastchk}</th>
 			<th></th>
 			<th></th>
 		</tr>
 	</thead>
 	<tbody>{v#rows}</tbody>
 </table>
-
-<!--{row}-->
-<tr valign="top">
+<!--{row}--><tr valign="top">
 	<td>{v#nm}</td>
 	<td><a href="{v#url}" target="_blank">{v#url}</a></td>
 	<td>{v#chm}</td>
 	<td>{v#chl}</td>
-	<td><a href="#" id="{i#edit}-{v#id}">{#rss.chanel.row.setup}</a></td>
-	<td><a href="#" id="{i#remove}-{v#id}">{#rss.chanel.row.remove}</a></td>
+	<td><a href="#" id="{i#edit}-{v#id}">{#mod.rss.chanel.row.setup}</a></td>
+	<td><a href="#" id="{i#remove}-{v#id}">{#mod.rss.chanel.row.remove}</a></td>
 </tr>
-
-<!--{editorchanel}-->
-<div class='hd'>{#rss.chanel.editorchanel.hd}</div>
+<!--{editorchanel}--><div class='hd'>{#mod.rss.chanel.editorchanel.hd}</div>
 <div class='bd'>
 	<div class="field linespace-1">
-		<p>{#rss.chanel.editorchanel.title}<input id="{i#nm}" type="text" value="" style="width: 200px" /></p>
-		<p>{#rss.chanel.editorchanel.descr}<br />
+		<p>{#mod.rss.chanel.editorchanel.title}<input id="{i#nm}" type="text" value="" style="width: 200px" /></p>
+		<p>{#mod.rss.chanel.editorchanel.descr}<br />
 				<textarea id="{i#dsc}" style="width: 430px; height: 50px"></textarea>
 		</p>
-		<h3>{#rss.chanel.editorchanel.params}</h3>
-		<p>{#rss.chanel.editorchanel.interval}<input id="{i#chm}" type="text" value="" style="width: 50px" value="30"/></p>
-		<p>{#rss.chanel.editorchanel.retcount}<input id="{i#gcnt}" type="text" value="" style="width: 50px" value="25"/></p>
-		<h3>{#rss.chanel.editorchanel.linklist}</h3>
+		<h3>{#mod.rss.chanel.editorchanel.params}</h3>
+		<p>{#mod.rss.chanel.editorchanel.interval}<input id="{i#chm}" type="text" value="" style="width: 50px" value="30"/></p>
+		<p>{#mod.rss.chanel.editorchanel.retcount}<input id="{i#gcnt}" type="text" value="" style="width: 50px" value="25"/></p>
+		<h3>{#mod.rss.chanel.editorchanel.linklist}</h3>
 		<p>
-			<select id="{i#newsource}" style="width: 150px">{v#nslist}</select> <input id="{i#baddsource}" type="button" value="{#rss.chanel.editorchanel.baddsrc}" />
+			<select id="{i#newsource}" style="width: 150px">{v#nslist}</select> <input id="{i#baddsource}" type="button" value="{#mod.rss.chanel.editorchanel.baddsrc}" />
 		</p>
 		<div id="{i#table}"></div>
 	 	<div class="buttons right">
-			<input id="{i#badd}" type="button" value="{#rss.chanel.editorchanel.badd}" />
-			<input id="{i#bsave}" type="button" value="{#rss.chanel.editorchanel.bsave}" />
-			<input id="{i#bcancel}" type="button" value="{#rss.chanel.editorchanel.bcancel}" />
+			<input id="{i#badd}" type="button" value="{#mod.rss.chanel.editorchanel.badd}" />
+			<input id="{i#bsave}" type="button" value="{#mod.rss.chanel.editorchanel.bsave}" />
+			<input id="{i#bcancel}" type="button" value="{#mod.rss.chanel.editorchanel.bcancel}" />
 		</div>
 	</div>
 </div>
-
-<!--{option}-->
-<option value="{v#id}"> {v#nm}</option>
-
-<!--{edchtable}-->
-<table class="bk-table-def">
+<!--{option}--><option value="{v#id}"> {v#nm}</option>
+<!--{edchtable}--><table class="bk-table-def">
 	<thead>
 		<tr>
-			<th>{#rss.chanel.edchtable_title}</th>
+			<th>{#mod.rss.chanel.edchtable_title}</th>
 			<th></th>
 		</tr>
 	</thead>
 	<tbody>{v#rows}</tbody>
 </table>
-
-<!--{edchrow}-->
-<tr valign="top">
+<!--{edchrow}--><tr valign="top">
 	<td>{v#nm}</td>
-	<td><a href="#" id="{i#remove}-{v#id}">{#rss.chanel.edchrow_remove}</a></td>
+	<td><a href="#" id="{i#remove}-{v#id}">{#mod.rss.chanel.edchrow_remove}</a></td>
 </tr>
-
-<!--{tablesource}-->
-<table class="bk-table-def">
+<!--{tablesource}--><table class="bk-table-def">
 	<thead>
 		<tr>
-			<th>{#rss.chanel.tablesource.title}</th>
-			<th>{#rss.chanel.tablesource.link}</th>
+			<th>{#mod.rss.chanel.tablesource.title}</th>
+			<th>{#mod.rss.chanel.tablesource.link}</th>
 			<th></th>
 			<th></th>
 		</tr>
 	</thead>
 	<tbody>{v#rows}</tbody>
 </table>
-
-<!--{rowsource}-->
-<tr valign="top">
+<!--{rowsource}--><tr valign="top">
 	<td>{v#nm}</td>
 	<td>{v#url}</td>
-	<td><a href="#" id="{i#edit}-{v#id}">{#rss.chanel.rowsource.edit}</a></td>
-	<td><a href="#" id="{i#remove}-{v#id}">{#rss.chanel.rowsource.remove}</a></td>
+	<td><a href="#" id="{i#edit}-{v#id}">{#mod.rss.chanel.rowsource.edit}</a></td>
+	<td><a href="#" id="{i#remove}-{v#id}">{#mod.rss.chanel.rowsource.remove}</a></td>
 </tr>
-
-<!--{editorsource}-->
-<div class='hd'>{#rss.chanel.editorsource.hd}</div>
+<!--{editorsource}--><div class='hd'>{#mod.rss.chanel.editorsource.hd}</div>
 <div class='bd'>
 	<div class="field linespace-1">
-		<p>{#rss.chanel.editorsource.title}<input id="{i#nm}" type="text" value="" style="width: 200px" /></p>
-		<p>{#rss.chanel.editorsource.link}<br />
+		<p>{#mod.rss.chanel.editorsource.title}<input id="{i#nm}" type="text" value="" style="width: 200px" /></p>
+		<p>{#mod.rss.chanel.editorsource.link}<br />
 			<textarea id="{i#url}" style="width: 600px; height: 30px"></textarea> 
 		</p>
-		<p>{#rss.chanel.editorsource.descr}<br />
+		<p>{#mod.rss.chanel.editorsource.descr}<br />
 				<textarea id="{i#dsc}" style="width: 600px; height: 50px"></textarea>
 		</p>
 		<p>
-			{#rss.chanel.editorsource.prefix}<input id="{i#pfx}" type="text" value="" style="width: 200px" />
+			{#mod.rss.chanel.editorsource.prefix}<input id="{i#pfx}" type="text" value="" style="width: 200px" />
 		</p>
 		<div class="dsc">
-			{#rss.chanel.editorsource.note}
+			{#mod.rss.chanel.editorsource.note}
 		</div>
 	 	<div class="buttons right">
-			<input id="{i#badd}" type="button" value="{#rss.chanel.editorsource.badd}" />
-			<input id="{i#bsave}" type="button" value="{#rss.chanel.editorsource.bsave}" />
-			<input id="{i#bcancel}" type="button" value="{#rss.chanel.editorsource.bcancel}" />
+			<input id="{i#badd}" type="button" value="{#mod.rss.chanel.editorsource.badd}" />
+			<input id="{i#bsave}" type="button" value="{#mod.rss.chanel.editorsource.bsave}" />
+			<input id="{i#bcancel}" type="button" value="{#mod.rss.chanel.editorsource.bcancel}" />
 		</div>
 	</div>
 </div>
