license GPL to MIT, update by core 0.5.7, version++

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,6 +1,6 @@
 <!--[*]
 [tt=ajax]_sys[/tt]
-[script]content_index.php[/script]
+[script]content/index.php[/script]
 [ph=sys:site_name][/ph]
 [ph=sys:admin_mail][/ph]
 [*]-->
