--- a/src/brick/meta.html
+++ b/src/brick/meta.html
@@ -1,5 +1,5 @@
 <!--[*]
 [ph=rss:default][/ph]
-[script]brick_meta.php[/script]
+[script]brick/meta.php[/script]
 [bkvar=link]<link href="{v#link}" title="" type="application/rss+xml" rel="alternate" />[/bkvar]
 [*]-->
